--- a/YJ/Podfile
+++ b/YJ/Podfile
@@ -10,6 +10,7 @@ pod 'AFNetworking'
 pod 'MJRefresh'
 pod 'MJExtension'
 pod 'IQKeyboardManager'
+pod 'SDWebImage'
 pod 'DZNEmptyDataSet'
 pod "MBProgressHUD", '~> 1.0.0'
 pod 'JXPagingView/Pager'
